data/derived/comb/progs/unify/prog4698.ml.out
Characters 102-103:
  if not (lengthOfList (digitsOfInt n) = 1)
                                         ^
Error: This expression has type int but an expression was expected of type
         'a -> int
